--- a/Shuzzle/app/src/main/AndroidManifest.xml
+++ b/Shuzzle/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.gallery.GalleryActivity"></activity>
         <activity
             android:name=".ui.splash.SplashScreenActivity"
             android:theme="@style/SplashTheme">
@@ -21,7 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.main.MainActivity" />
     </application>
 
