--- a/Shuzzle/app/src/main/AndroidManifest.xml
+++ b/Shuzzle/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.jaysonleon.shuzzle">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -12,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.gallery.GalleryActivity"></activity>
+        <activity android:name=".ui.gallery.GalleryActivity" />
         <activity
             android:name=".ui.splash.SplashScreenActivity"
             android:theme="@style/SplashTheme">
